// Vitest Snapshot v1

exports[`AddDeskSlideOver.vue > props features > hide 1`] = `
<body>
  <div>
    <!---->
  </div>
</body>
`;

exports[`AddDeskSlideOver.vue > props features > loading 1`] = `
<body>
  <div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <div
    id="headlessui-portal-root"
  >
    <div>
      <div
        class="fixed inset-0 z-30 pointer-events-none add-desk-slide-over"
      >
        <div
          class="absolute inset-0 overflow-hidden pointer-events-none"
        >
          <!--v-if-->
          <div
            class="fixed inset-y-0 right-0 flex max-w-full pointer-events-none"
          >
            <div
              class="translate-x-full transform transition ease-out duration-500"
            >
              <form
                class="layer-2 relative z-[38] flex h-full w-screen max-w-[calc(100vw-15rem)] flex-col overflow-hidden rounded-tl-[2rem] border border-solid border-gray-100 bg-gray-100 pointer-events-auto"
              >
                <div
                  class="slide-over__header relative mx-12 border-b border-stone-200"
                >
                  
                  <button
                    class="absolute top-[0.375rem] right-[-0.5rem] z-10 inline-flex h-12 w-12 items-center justify-center rounded-full outline-none hover:bg-stone-200"
                    type="button"
                  >
                    <span
                      class="icon-cross_thin text-[1rem] text-[#4c4c4c]"
                      data-v-29bee188=""
                    />
                  </button>
                  <div
                    class="text-pageheading py-5 text-stone-800"
                  >
                    Create New Desk
                  </div>
                  
                </div>
                <div
                  class="slide-over__body mx-12 flex-shrink flex-grow overflow-auto"
                >
                  
                  <div
                    class="relative flex-shrink flex-grow overflow-auto"
                  >
                    <div
                      class="mb-12"
                    >
                      <div
                        class="flex justify-between py-4"
                      >
                        <!---section title wrapper--->
                        <div
                          class="w-[17rem] pt-4"
                        >
                          <!---title--->
                          <div
                            class="text-heading pb-4 pr-2 text-stone-800"
                          >
                            Desk settings
                          </div>
                          <!---descriptipn--->
                          <div
                            class="text-body text-stone-500"
                          >
                            Add team members and control permissions to this desk. The desk name is used in your live site for section headings and navigation.
                          </div>
                        </div>
                        <!---right hand form--->
                        
                        <div
                          class="layer-1 h-fit w-[34rem] rounded-lg bg-white px-5 py-5"
                        >
                          
                          <div
                            class="flex items-end"
                          >
                            <div
                              class="mr-4 basis-[11rem]"
                            >
                              <label
                                class="text-body text-stone-800 block"
                                for="input-4fzzzxjylrx"
                              >
                                Desk name
                              </label>
                              <div
                                class="mt-1 relative"
                              >
                                <!--v-if-->
                                <input
                                  class="text-inputs block w-full border border-gray-400 px-3 pt-1.5 pb-[0.312rem] focus:outline-none focus:ring-1 rounded-md focus:border-indigo-500 focus:ring-indigo-500"
                                  id="input-4fzzzxjylrx"
                                  name="name"
                                  type="text"
                                />
                                <!--v-if-->
                              </div>
                            </div>
                            <span
                              class="basis-[9.875rem]"
                            >
                              
                              <div>
                                <label
                                  class="text-body block text-stone-800"
                                  id="headlessui-listbox-label-4"
                                >
                                  Open Access 
                                  
                                  
                                </label>
                                <div
                                  class="relative mt-1 h-[2.375rem]"
                                >
                                  <button
                                    aria-expanded="false"
                                    aria-haspopup="true"
                                    aria-labelledby="headlessui-listbox-label-4 headlessui-listbox-button-5"
                                    class="text-inputs relative h-full w-full cursor-default rounded-md border border-gray-400 bg-white pt-1.5 pb-[0.312rem] pl-3 pr-10 text-left focus:border-sky-300 focus:outline-none focus:ring-1 focus:ring-sky-300"
                                    id="headlessui-listbox-button-5"
                                    type="button"
                                  >
                                    <span
                                      class="block truncate"
                                    >
                                      No
                                    </span>
                                    <span
                                      class="pointer-events-none absolute inset-y-0 right-0 flex items-center pr-2"
                                    >
                                      <span
                                        class="icon-selector text-stone-500"
                                        data-v-29bee188=""
                                      />
                                    </span>
                                  </button>
                                  <transition-stub>
                                    <!---->
                                  </transition-stub>
                                  <!--v-if-->
                                </div>
                              </div>
                              
                            </span>
                          </div>
                          <hr
                            class="-mx-5 mt-7 mb-[1.375rem] border-stone-200"
                          />
                          <div
                            class="flex items-end"
                          >
                            <div
                              class="typeahead mr-4 flex-grow"
                              data-v-78a49bc4=""
                              data-v-8904dede=""
                            >
                              <label
                                class="text-body mb-1 block text-stone-800"
                                data-v-78a49bc4=""
                              >
                                Invite users
                              </label>
                              <div
                                class="typeahead-wrap text-body relative h-full w-full rounded-md border border-gray-400 bg-white px-2 py-2 focus:border-indigo-500 focus:outline-none focus:ring-1 focus:ring-indigo-500"
                                data-v-78a49bc4=""
                              >
                                <label
                                  class="typeahead-label absolute text-black/25 hover:cursor-text"
                                  data-v-78a49bc4=""
                                  for="typeahead-4fzzzxjylrx"
                                >
                                  <span
                                    data-v-78a49bc4=""
                                  >
                                    Start typing the name of a user ...
                                  </span>
                                </label>
                                <ul
                                  class="flex w-full flex-wrap"
                                  data-v-78a49bc4=""
                                >
                                  
                                  
                                  <li
                                    class="flex-1"
                                    data-v-78a49bc4=""
                                  >
                                    <div
                                      class="simple-typeahead"
                                      data-v-04d98098=""
                                      data-v-78a49bc4=""
                                      id="typeahead-4fzzzxjylrx_wrapper"
                                    >
                                      <input
                                        autocomplete="off"
                                        class="simple-typeahead-input"
                                        data-v-04d98098=""
                                        id="typeahead-4fzzzxjylrx"
                                        placeholder=""
                                        type="text"
                                      />
                                      <!---->
                                    </div>
                                  </li>
                                </ul>
                              </div>
                            </div>
                            <button
                              class="text-[0.875rem] font-medium leading-[1.14] inline-flex h-9 items-center justify-center rounded px-4 py-2.5 text-white bg-primary hover:bg-emerald-900 focus:ring-emerald-500 focus:outline-none focus:ring-2 focus:ring-offset-2 ml-auto ml-auto"
                              data-v-1a83bba8=""
                              disabled="false"
                              type="button"
                            >
                              
                               Invite 
                              
                            </button>
                          </div>
                          
                        </div>
                        
                      </div>
                    </div>
                    <div
                      class="relative mb-[5.375rem] flex-shrink flex-grow"
                    >
                      <div
                        class="flex items-center justify-between border-b border-stone-200"
                      >
                        <div
                          class="text-pageheading mb-4 pt-1.5 text-stone-800"
                        >
                          Desk team
                        </div>
                        <div
                          class="flex items-center"
                        >
                          
                          
                        </div>
                      </div>
                      
                      <hr
                        class="border-t border-solid border-stone-200"
                      />
                      <div
                        class="overflow-scroll py-4"
                      >
                        <!--v-if-->
                        <div
                          class="text-[1.625rem] font-normal leading-[1.23] layer-1 flex h-40 items-center justify-center rounded-lg border bg-white text-black/25"
                        >
                           Invite your teammates to this desk 
                        </div>
                      </div>
                      
                    </div>
                  </div>
                  
                </div>
                <div
                  class="slide-over__footer flex items-center border-t border-solid bg-white px-6 pt-[0.562rem] pb-[0.688rem]"
                >
                  
                  <button
                    class="text-[0.875rem] font-medium leading-[1.14] inline-flex h-9 items-center justify-center rounded px-4 py-2.5 focus:outline-none bg-stone-200 text-stone-500 cursor-not-allowed"
                    data-v-1a83bba8=""
                    disabled="true"
                    type="submit"
                  >
                    
                    <span
                      style="visibility: hidden;"
                    >
                       Create new desk 
                    </span>
                    <img
                      class="absolute h-5 w-5 animate-spin"
                      src="/assets/spinner.svg"
                    />
                    
                  </button>
                  
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
    
  </div>
</body>
`;

exports[`AddDeskSlideOver.vue > props features > show 1`] = `
<body>
  <div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <div
    id="headlessui-portal-root"
  >
    <div>
      <div
        class="fixed inset-0 z-30 add-desk-slide-over"
      >
        <div
          class="absolute inset-0 overflow-hidden"
        >
          <div
            class="opacity-0 ease-out duration-500"
          >
            <div
              class="absolute inset-0"
            />
          </div>
          <div
            class="fixed inset-y-0 right-0 flex max-w-full"
          >
            <div
              class="translate-x-full transform transition ease-out duration-500"
            >
              <form
                class="layer-2 relative z-[38] flex h-full w-screen max-w-[calc(100vw-15rem)] flex-col overflow-hidden rounded-tl-[2rem] border border-solid border-gray-100 bg-gray-100"
              >
                <div
                  class="slide-over__header relative mx-12 border-b border-stone-200"
                >
                  
                  <button
                    class="absolute top-[0.375rem] right-[-0.5rem] z-10 inline-flex h-12 w-12 items-center justify-center rounded-full outline-none hover:bg-stone-200"
                    type="button"
                  >
                    <span
                      class="icon-cross_thin text-[1rem] text-[#4c4c4c]"
                      data-v-29bee188=""
                    />
                  </button>
                  <div
                    class="text-pageheading py-5 text-stone-800"
                  >
                    Create New Desk
                  </div>
                  
                </div>
                <div
                  class="slide-over__body mx-12 flex-shrink flex-grow overflow-auto"
                >
                  
                  <div
                    class="relative flex-shrink flex-grow overflow-auto"
                  >
                    <div
                      class="mb-12"
                    >
                      <div
                        class="flex justify-between py-4"
                      >
                        <!---section title wrapper--->
                        <div
                          class="w-[17rem] pt-4"
                        >
                          <!---title--->
                          <div
                            class="text-heading pb-4 pr-2 text-stone-800"
                          >
                            Desk settings
                          </div>
                          <!---descriptipn--->
                          <div
                            class="text-body text-stone-500"
                          >
                            Add team members and control permissions to this desk. The desk name is used in your live site for section headings and navigation.
                          </div>
                        </div>
                        <!---right hand form--->
                        
                        <div
                          class="layer-1 h-fit w-[34rem] rounded-lg bg-white px-5 py-5"
                        >
                          
                          <div
                            class="flex items-end"
                          >
                            <div
                              class="mr-4 basis-[11rem]"
                            >
                              <label
                                class="text-body text-stone-800 block"
                                for="input-4fzzzxjylrx"
                              >
                                Desk name
                              </label>
                              <div
                                class="mt-1 relative"
                              >
                                <!--v-if-->
                                <input
                                  class="text-inputs block w-full border border-gray-400 px-3 pt-1.5 pb-[0.312rem] focus:outline-none focus:ring-1 rounded-md focus:border-indigo-500 focus:ring-indigo-500"
                                  id="input-4fzzzxjylrx"
                                  name="name"
                                  type="text"
                                />
                                <!--v-if-->
                              </div>
                            </div>
                            <span
                              class="basis-[9.875rem]"
                            >
                              
                              <div>
                                <label
                                  class="text-body block text-stone-800"
                                  id="headlessui-listbox-label-4"
                                >
                                  Open Access 
                                  
                                  
                                </label>
                                <div
                                  class="relative mt-1 h-[2.375rem]"
                                >
                                  <button
                                    aria-expanded="false"
                                    aria-haspopup="true"
                                    aria-labelledby="headlessui-listbox-label-4 headlessui-listbox-button-5"
                                    class="text-inputs relative h-full w-full cursor-default rounded-md border border-gray-400 bg-white pt-1.5 pb-[0.312rem] pl-3 pr-10 text-left focus:border-sky-300 focus:outline-none focus:ring-1 focus:ring-sky-300"
                                    id="headlessui-listbox-button-5"
                                    type="button"
                                  >
                                    <span
                                      class="block truncate"
                                    >
                                      No
                                    </span>
                                    <span
                                      class="pointer-events-none absolute inset-y-0 right-0 flex items-center pr-2"
                                    >
                                      <span
                                        class="icon-selector text-stone-500"
                                        data-v-29bee188=""
                                      />
                                    </span>
                                  </button>
                                  <transition-stub>
                                    <!---->
                                  </transition-stub>
                                  <!--v-if-->
                                </div>
                              </div>
                              
                            </span>
                          </div>
                          <hr
                            class="-mx-5 mt-7 mb-[1.375rem] border-stone-200"
                          />
                          <div
                            class="flex items-end"
                          >
                            <div
                              class="typeahead mr-4 flex-grow"
                              data-v-78a49bc4=""
                              data-v-8904dede=""
                            >
                              <label
                                class="text-body mb-1 block text-stone-800"
                                data-v-78a49bc4=""
                              >
                                Invite users
                              </label>
                              <div
                                class="typeahead-wrap text-body relative h-full w-full rounded-md border border-gray-400 bg-white px-2 py-2 focus:border-indigo-500 focus:outline-none focus:ring-1 focus:ring-indigo-500"
                                data-v-78a49bc4=""
                              >
                                <label
                                  class="typeahead-label absolute text-black/25 hover:cursor-text"
                                  data-v-78a49bc4=""
                                  for="typeahead-4fzzzxjylrx"
                                >
                                  <span
                                    data-v-78a49bc4=""
                                  >
                                    Start typing the name of a user ...
                                  </span>
                                </label>
                                <ul
                                  class="flex w-full flex-wrap"
                                  data-v-78a49bc4=""
                                >
                                  
                                  
                                  <li
                                    class="flex-1"
                                    data-v-78a49bc4=""
                                  >
                                    <div
                                      class="simple-typeahead"
                                      data-v-04d98098=""
                                      data-v-78a49bc4=""
                                      id="typeahead-4fzzzxjylrx_wrapper"
                                    >
                                      <input
                                        autocomplete="off"
                                        class="simple-typeahead-input"
                                        data-v-04d98098=""
                                        id="typeahead-4fzzzxjylrx"
                                        placeholder=""
                                        type="text"
                                      />
                                      <!---->
                                    </div>
                                  </li>
                                </ul>
                              </div>
                            </div>
                            <button
                              class="text-[0.875rem] font-medium leading-[1.14] inline-flex h-9 items-center justify-center rounded px-4 py-2.5 text-white bg-primary hover:bg-emerald-900 focus:ring-emerald-500 focus:outline-none focus:ring-2 focus:ring-offset-2 ml-auto ml-auto"
                              data-v-1a83bba8=""
                              disabled="false"
                              type="button"
                            >
                              
                               Invite 
                              
                            </button>
                          </div>
                          
                        </div>
                        
                      </div>
                    </div>
                    <div
                      class="relative mb-[5.375rem] flex-shrink flex-grow"
                    >
                      <div
                        class="flex items-center justify-between border-b border-stone-200"
                      >
                        <div
                          class="text-pageheading mb-4 pt-1.5 text-stone-800"
                        >
                          Desk team
                        </div>
                        <div
                          class="flex items-center"
                        >
                          
                          
                        </div>
                      </div>
                      
                      <hr
                        class="border-t border-solid border-stone-200"
                      />
                      <div
                        class="overflow-scroll py-4"
                      >
                        <!--v-if-->
                        <div
                          class="text-[1.625rem] font-normal leading-[1.23] layer-1 flex h-40 items-center justify-center rounded-lg border bg-white text-black/25"
                        >
                           Invite your teammates to this desk 
                        </div>
                      </div>
                      
                    </div>
                  </div>
                  
                </div>
                <div
                  class="slide-over__footer flex items-center border-t border-solid bg-white px-6 pt-[0.562rem] pb-[0.688rem]"
                >
                  
                  <button
                    class="text-[0.875rem] font-medium leading-[1.14] inline-flex h-9 items-center justify-center rounded px-4 py-2.5 text-white bg-primary hover:bg-emerald-900 focus:ring-emerald-500 focus:outline-none focus:ring-2 focus:ring-offset-2"
                    data-v-1a83bba8=""
                    disabled="false"
                    type="submit"
                  >
                    
                    <span
                      style="visibility: visible;"
                    >
                       Create new desk 
                    </span>
                    <!--v-if-->
                    
                  </button>
                  
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
    
  </div>
</body>
`;
